spacing issues resolved.

--- a/client/faq/faq.sass
+++ b/client/faq/faq.sass
@@ -1,15 +1,18 @@
 @import '../layout/variables'
 
 #faq-content
+  .btc-row
+    padding-bottom: 0
   .container
     max-width: 960px
   white-space: normal
   #faq-content-inner
     text-align: left
-    margin: 0 auto 4em
+    margin: 0 auto 2em
     > p
       text-indent: 1rem
   h3
+    font-weight: bold
     color: $color_blue-light
     &:not(:first-child)
       margin-top: 2em
