--- a/client/main/main.sass
+++ b/client/main/main.sass
@@ -32,7 +32,7 @@ header
       white-space: normal
 
   #faq-button
-    margin-bottom: 1em
+    margin: 0.5em auto
     background-color: $color_grey-light
     color:            $color_grey-dark
 
